# low-resource-protocol

./: CMakeLists.txt  README.md  main.c  main.cpp  testing.c  testing.h
.github/workflows/: low-resource-protocol-ci.yml  low-resource-protocol-library-ci.yml
src/: controller.h  frame.c  frame.h  line-code-4b5b.c  line-code-4b5b.h  line_code_4b5b.c  line_code_4b5b.h  link-layer.c  link-layer.h  link_layer.c  link_layer.h  msws.c  msws.h  parity-bit.h  parity_bit.c  parity_bit.h  receive_controller.c  receive_controller.h  receive_frame.c  receive_frame.h  receive_layer.c  receive_layer.h  session-provider-structures.h  session-provider.c  session-provider.h  session_provider.c  session_provider.h  session_provider_structures.h  structures.h  transmit_frame.c  transmit_frame.h
src/collision-detection/: collision-detection.c  collision-detection.h  collision-detection.module.c  collision-detection.module.h  collision_detection.c  collision_detection.h
src/data/: frame.data.h  line-code-4b5b.data.h  link-layer.data.h  session-provider.data.h
src/receive/: receive-application-layer.c  receive-application-layer.h  receive-line-code-layer.c  receive-line-code-layer.h  receive-link-layer.c  receive-link-layer.h  receive-session-provider.c  receive-session-provider.h  receive-structures.h  receive-validator-layer.c  receive-validator-layer.h  receive_application_layer.c  receive_application_layer.h  receive_line_code_layer.c  receive_line_code_layer.h  receive_link_layer.c  receive_link_layer.h  receive_structures.h  receive_validator_layer.c  receive_validator_layer.h
src/receiver/: receiver.module.c  receiver.module.h
src/transmit/: transmit-application-layer.c  transmit-application-layer.h  transmit-line-code-layer.c  transmit-line-code-layer.h  transmit-link-layer.c  transmit-link-layer.h  transmit-session-provider.c  transmit-session-provider.h  transmit-structures.h  transmit-validator-layer.c  transmit-validator-layer.h  transmit_application_layer.c  transmit_application_layer.h  transmit_line_code_layer.c  transmit_line_code_layer.h  transmit_link_layer.c  transmit_link_layer.h  transmit_structures.h  transmit_validator_layer.c  transmit_validator_layer.h
src/transmitter/: transmitter.module.c  transmitter.module.h
src/utilities/: msws.utility.c  msws.utility.h  parity-bit.utility.c  (+1 more)
testing/: receive-test-cases.c  receive-test-cases.h  receive-testing.c  receive-testing.h  testing.c  testing.h  transmit-test-cases.c  transmit-test-cases.h  transmit-testing.c  transmit-testing.h
tests/: frame.test.cpp  line-code-4b5b.test.cpp  line_code_4b5b.test.cpp  link-layer.test.cpp  link_layer.test.cpp  parity-bit.test.cpp  parity_bit.test.cpp  session-provider.test.cpp  session_provider.test.cpp
(+52 files in other folders)
